# sig4cpython

./: pyproject.toml
docs/: PACAPDG_SIG4CPYTHON_NORMALIZATION.md  SIG4PY_EXTERNAL_GLUE_LAYER_V1.md  SIGIL4CPYTHON_CANONICAL_STABLE_MODULES_GLUE_V1.md
docs/kuirkode/: K_NEXT_KAPSYLA_REGISTRY_V1.md
docs/runtime/: CLOPENAPI_PYPL_PRESHEAF_QQUAPP_UX_NOISE_V1.md
