[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sigil4cpython"
version = "0.1.0"
description = "Strict typed SIGIL4PY + compiled C bridge for PACAPDG replay-safe kernels"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "Jara Juana Bermejo Vega" }
]
license = { text = "Apache-2.0" }
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: C",
  "Programming Language :: Python :: Implementation :: CPython",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
sigil4py-check = "sigil4py.cli:main"
